; ModuleID = '/home/carl/AnghaBench/redis/src/extr_t_hash.c_hashTypeCurrentObjectNewSds.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_t_hash.c_hashTypeCurrentObjectNewSds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hashTypeCurrentObjectNewSds(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @hashTypeCurrentObject(i32* %9, i32 %10, i8** %6, i32* %7, i64* %8)
  %12 = load i8*, i8** %6, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %18

14:                                               ; preds = %2
  %15 = load i8*, i8** %6, align 8
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @sdsnewlen(i8* %15, i32 %16)
  store i32 %17, i32* %3, align 4
  br label %21

18:                                               ; preds = %2
  %19 = load i64, i64* %8, align 8
  %20 = call i32 @sdsfromlonglong(i64 %19)
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %18, %14
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @hashTypeCurrentObject(i32*, i32, i8**, i32*, i64*) #1

declare dso_local i32 @sdsnewlen(i8*, i32) #1

declare dso_local i32 @sdsfromlonglong(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
